resources/style.css
@import "https://unpkg.com/open-props/normalize.min.css";
@import "https://unpkg.com/open-props/open-props.min.css";

body {
  min-height: 100vh;
  font-family:  'Inter', sans-serif, system-ui;
  background: var(--surface-1);
  display: grid;
  justify-items: center;
  align-content: center;
  overflow-x: hidden;
}

@media(prefers-color-scheme: dark) {
  section p {
    background: hsl(210 11% 15% / 0.65);
  }
}

main {
  display: grid;
  align: center;
}

h1 {
  font-weight: 200;
  font-size: calc(var(--font-size-fluid-3) * 1.0);
  line-height: 1.1;
  position: absolute;
  left:55%;
  bottom: 20%;
}

